# aoc

./: .gitignore
2021/day03/rs/src/: main.rs
2021/day04/rs/: Cargo.toml
2021/day04/rs/src/: main.rs
2021/day06/py/: day6.py
2021/day07/rs/: Cargo.toml
2021/day08/rs/: Cargo.toml
2021/day09/py/: day9.py
2021/day09/rs/: Cargo.toml
2021/day10/py/: day10.py
2021/day10/rs/: Cargo.toml
2021/day11/py/: day11-2.py  day11.py
2021/day12/py/: day12.py
2021/day13/: example2.txt
2021/day13/py/: day13.py  day13_v2.py
2021/day13/rs/: Cargo.toml
2021/day14/py/: day14.py
2021/day15/: test.txt
2021/day15/py/: day15.py  day15np.py
2021/day16/py/: day16.py
2021/day17/rs/: Cargo.toml
2021/day18/rs/: Cargo.toml
2021/day19/py/: day19.py
2021/day19/rs/: Cargo.toml
2021/day19/rs/src/: main.rs
2021/day20/py/: day20.py
2021/day21/py/: day21.py
2021/day21/rs/: Cargo.toml
2021/day22/py/: day22.py
2021/day23/: test.txt
2021/day23/py/: day23_p1.py  day23_p12.py  day23_p2.py  testp2.txt
2021/day23/rs/: Cargo.toml
2021/day5/py/: day5.py
2021/day5/rs/: Cargo.toml
2021/day7/py/: day7.py
2021/day8/py/: day8.py
2022/day01/py/: day01.py
2022/day02/py/: day02.py
2022/day03/py/: day03.py
2022/day04/py/: day04.py
2022/day05/py/: day05.py
2022/day06/py/: day06.py
2022/day07/py/: day07.py
2022/day08/py/: day08.py
2022/day09/py/: day09.py  day09_2.py
2022/day10/py/: day10.py
2022/day11/py/: day11.py
2022/day12/py/: day12.py
2022/day13/py/: day13.py
2022/day14/py/: day14.py
2022/day15/py/: day15.py
(+21 files in other folders)
